welcome.lessons.welcome.instructions.Instructions.scala.error
Program:2: error: '<-' expected but ')' found.
for(1 to 3) {
          ^Program:7: error: illegal start of simple expression
	}
        ^